Fix activity play sheet: redesign UI, fix GIF scaling, and improve credit/health logic
- Redesigned ActivityPlaySheet with better UI following app theme
- Fixed GIFImage component to properly scale and display full GIF animations
- Fixed credit deduction and health boost to happen when starting activity (not on Done)
- Added PlayGIF animations for pet activities (Feed, Play Ball, Watch TV)
- Updated widget with proper image handling and fallback symbols

--- a/Info.plist
+++ b/Info.plist
@@ -61,5 +61,7 @@
         <string>processing</string>
         <string>location</string>
     </array>
+    <key>NSSupportsLiveActivities</key>
+    <true/>
 </dict>
 </plist>
