--- a/StepPet.entitlements
+++ b/StepPet.entitlements
@@ -10,7 +10,7 @@
     <true/>
     <key>com.apple.security.application-groups</key>
     <array>
-        <string>group.com.yourcompany.StepPet</string>
+        <string>group.com.yourcompany.VirtuPet</string>
     </array>
 </dict>
 </plist>
