--- a/StepPetWidget/StepPetWidget.entitlements
+++ b/StepPetWidget/StepPetWidget.entitlements
@@ -4,7 +4,7 @@
 <dict>
     <key>com.apple.security.application-groups</key>
     <array>
-        <string>group.com.yourcompany.StepPet</string>
+        <string>group.com.yourcompany.VirtuPet</string>
     </array>
 </dict>
 </plist>
