Optimize onboarding paywall sizing and add new GIF assets
- Reduced all onboarding paywall elements by 1-2% for better fit
- Added VirtupetFirstScreen.gif for welcome screen
- Added Virtupetpaywall1.gif for onboarding paywall
- Fixed ellipsis issues on timeline items
- Improved button responsiveness with ResponsiveButtonStyle
- Removed duplicate notification icons
- Added iPad icons and orientations
- Updated RevenueCat credit product IDs
- Enhanced onboarding animations and transitions

--- a/Info.plist
+++ b/Info.plist
@@ -43,6 +43,11 @@
 		<string>processing</string>
 		<string>location</string>
 	</array>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>$(PRODUCT_BUNDLE_IDENTIFIER).refresh</string>
+		<string>$(PRODUCT_BUNDLE_IDENTIFIER).healthkit</string>
+	</array>
 	<key>UILaunchScreen</key>
 	<dict>
 		<key>UIColorName</key>
@@ -62,6 +67,8 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 </dict>
 </plist>
